Array stage 3, Family B: freeze ParameterizedTypeConstant parameter storage
The getParamTypesArray() surface - the TypeConstant base API, the modifying-
type delegation chain, and ParameterizedTypeConstant's storage - now returns
FrozenArray<TypeConstant> (with NO_TYPES_FROZEN as the empty default).
getParamTypes() no longer returns a live Arrays.asList view of interned
storage (set()-writable into a shared constant - red on master). Frozen-
sharing overloads land on ensureParameterizedTypeConstant and
adoptParameters, so adopting another interned constant's parameters shares
the wrapper copy-free; TerminalTypeConstant's defensive .clone() before
parameter adoption is deleted in favor of that provably safe sharing - the
first of the scattered clone conventions stage 3 exists to kill.

Together with Family A this closes the cross-constant escape the audit
flagged: one raw array backing two interned constants is now one frozen
wrapper backing them, with no mutation channel. Hot internals keep zero-copy
access; 15 more consumer files converted mechanically.

ParameterizedTypeFrozenTest red-verified against the live-view shape. Both
gates green; full 22-module same-JVM sweep green. Ledger row 61.